# Burzhymskyi_FI-03_lab4

./: CMakeLists.txt  GF2.cpp  GF2.h  Test.cpp  main.cpp  out  Лабораторна робота 4.docx
